refactor: move object metadata route to /objects/{key}/metadata and object download to /objects/{key}
